--- a/starting-template/movieplex7/src/main/webapp/WEB-INF/template.xhtml
+++ b/starting-template/movieplex7/src/main/webapp/WEB-INF/template.xhtml
@@ -79,6 +79,8 @@
                     <h:form>
                         <p/><h:outputLink value="${facesContext.externalContext.requestContextPath}/faces/chat/chatroom.xhtml">Chat Room</h:outputLink>
                         <p/><h:outputLink value="${facesContext.externalContext.requestContextPath}/faces/batch/sales.xhtml">Sales</h:outputLink>
+                        <p/><h:outputLink value="${facesContext.externalContext.requestContextPath}/faces/client/movies.xhtml">Movies</h:outputLink>
+                        <p/><h:outputLink value="${facesContext.externalContext.requestContextPath}/faces/points/points.xhtml">Points</h:outputLink>
                     </h:form>
                 </ui:insert>
             </div>
@@ -87,5 +89,4 @@
             </div>
         </div>
     </h:body>
-
 </html>
